  20.12.2000 Goetz
  external to declaration of irp
  typedef before pns and pnc_number.

  18.12.2000 Goetz
  Changed parameter of Methods in type.h and type.c from
  class to clss.  Class is a C++ keyword.

  10.12.2000 Goetz
  Changed some testprograms to accomodate Uebprakt.

  7.9.2000 Goetz
  Finished implementation of dump_all_types.
  Added new testprogram inheritance_example.

  6.9.2000 Chris
  Added seven access routines in type.[hc]:
  get_class_n_member, get_class_n_subtype, get_class_n_supertype,
  get_strct_n_member, add_strct_member, get_strct_member and set_strct_member.
  Fixed the type_walk_2 for those seven routines.

  6.9.2000 Goetz
  Added irdump routine dump_all_types.
  Did changes to irprog, type, typewalk to achieve this.
  typewalk needs to walk along members, sub and supertypes, this
  is still missing!  irdump then needs to output these edges.

======================================================================
==================== New version: 0.2.5 ==============================
======================================================================

  3.9.2000 Goetz
  Made new Version: 0.2.5

  15.8.2000 Goetz until 3.9.00
  Separated irnode.h and many others into two files: one public
  one private.
  Added funcionality to extract headers for lib.

  23.8.2000 Goetz
  type_dump also dumps irg->ent
  if_example: corrected nr of locals

  16.8.2000 Goetz
  irgopt: Correct copy of self pointer in start block.
  irgopt: Correct treatment of loops: pre function in walker
    breaks all possible loops in Phi and Block nodes.
  irr_loop_example: wrong Return statement
  Now I fixed all but one error: in memory_example.
  This error showed a conceptual problem, so I wrote
  a slightly different algorithm.  This now runs for
  all testprograms.
  dead_node_example: cse is buggy!! merges start and the
  following block!

  15.8.2000 Goetz
  looking at bug in dead_node_elimination.
  Following fixes: